# cs282-pa2

./: .gitignore  3d_demo.R  3d_points.data  CMakeLists.txt  README.txt  bonus.cpp  main.cpp  main3.cpp  pa2_points.data  pa3.mine.txt  start-R.sh  start-pa3.sh  trash_code.txt  utils.cpp  utils.hpp
